--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -544,9 +544,8 @@ $("#search").keypress(function(event) {
         $("#searchbar").submit();
     }
 });
-
-  /* When the user clicks on the button,
-toggle between hiding and showing the dropdown content */
+// ------------------------------------------------------------------------------------------------------------------------------------------------ 
+// functions to open and close overlays 
   function clearForm() {
     console.log("cleared form");
     document.getElementById("searchbar").reset();
@@ -558,7 +557,7 @@ toggle between hiding and showing the dropdown content */
   }
   function openHelp() {
       document.getElementById("helpOverlay").style.display = "block";
-     document.getElementById("sideOverlay").style.width = "0";
+      document.getElementById("sideOverlay").style.width = "0";
       document.getElementById("sideOverlay").style.display = "none";
   }
   function closeHelp() {
@@ -576,7 +575,8 @@ toggle between hiding and showing the dropdown content */
       document.getElementById("sideOverlay").style.display = "none";
   }
 
-  //  script for saved list
+// ------------------------------------------------------------------------------------------------------------------------------------------------ 
+  // detect mobile?
   var collapse = true;
   var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
   console.log(width);
@@ -585,11 +585,11 @@ toggle between hiding and showing the dropdown content */
    x.style.display = "block";
     collapse = false;
   }
-
   $('.dropdown-menu').on('click', function(e) {
     e.stopPropagation();
   });
 
+  // javascript for clockpicker
   $('.clockpicker').clockpicker({
      twelvehour: true,
      default: 'now'
@@ -603,6 +603,9 @@ toggle between hiding and showing the dropdown content */
      autoclose: true,
      default: 'now'
    });
+
+// ------------------------------------------------------------------------------------------------------------------------------------------------
+  //MAP CONTROLS
 
     // Adds different layer groups
     var printers = L.layerGroup();
@@ -668,25 +671,19 @@ toggle between hiding and showing the dropdown content */
        popupAnchor:  [0, -18] // point from which the popup should open relative to the iconAnchor
      });
 
-// Put the locations for each resource to its corresponding layer
+  // Put the locations for each resource to its corresponding layer
   for (var i = 0; i < printerLocs.length; i++) {
-    L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);
- }
+    L.marker([printerLocs[i][0], printerLocs[i][1]], {title: printerLocs[i][2], icon: printerIcon}).bindPopup(printerLocs[i][2]).addTo(printers);}
  for (var i = 0; i < laundryLocs.length; i++) {
-    L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);
- }
+    L.marker([laundryLocs[i][0], laundryLocs[i][1]], {title: laundryLocs[i][2], icon: laundryIcon}).bindPopup(laundryLocs[i][2]).addTo(laundry);}
  for (var i = 0; i < hotspotLocs.length; i++) {
-    L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindPopup(hotspotLocs[i][2]).addTo(hotspots);
- }
+    L.marker([hotspotLocs[i][0], hotspotLocs[i][1]], {title: hotspotLocs[i][2], icon: hotspotIcon}).bindPopup(hotspotLocs[i][2]).addTo(hotspots);}
  for (var i = 0; i < waterLocs.length; i++) {
-    L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindPopup(waterLocs[i][2]).addTo(waterspots);
- }
+    L.marker([waterLocs[i][0], waterLocs[i][1]], {title: waterLocs[i][2], icon: waterIcon}).bindPopup(waterLocs[i][2]).addTo(waterspots);}
  for (var i = 0; i < kitchens.length; i++) {
-    L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);
- }
+    L.marker([kitchens[i][0], kitchens[i][1]], {title: kitchens[i][2], icon: kitchenIcon}).bindPopup(kitchens[i][2]).addTo(kitchenspots);}
   for (var i = 0; i < dining.length; i++) {
-    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);
- }
+    L.marker([dining[i][0], dining[i][1]], {title: dining[i][2], icon: diningIcon}).bindPopup(dining[i][2]).addTo(diningspots);}
 
     // URLs of different map layers and their attributions
     var mbAttr = 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a> contributors, ' +
@@ -707,25 +704,25 @@ toggle between hiding and showing the dropdown content */
       zoomControl: true
     });
 
-// Provides bounds and limits the user to only within those coordinates
-var southWest = L.latLng(40.323212, -74.718103),
-northEast = L.latLng(40.368481, -74.596444);
-var bounds = L.latLngBounds(southWest, northEast);
+  // Provides bounds and limits the user to only within those coordinates
+  var southWest = L.latLng(40.323212, -74.718103),
+  northEast = L.latLng(40.368481, -74.596444);
+  var bounds = L.latLngBounds(southWest, northEast);
 
-map.setMaxBounds(bounds);
-map.on('drag', function() {
-  map.panInsideBounds(bounds, { animate: false });
-});
+  map.setMaxBounds(bounds);
+  map.on('drag', function() {
+    map.panInsideBounds(bounds, { animate: false });
+  });
 
-// Gives Jerry the Julius Caesar Salad Building
-var temp = "{{netid}}";
-if(temp === "jywei"){
-L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
-    .bindPopup("Julius Caesar Salad Building - Jerry");
-}
+  // Gives Jerry the Julius Caesar Salad Building
+  var temp = "{{netid}}";
+  if(temp === "jywei"){
+  L.marker([40.349152, -74.655383], {icon: saladIcon}).addTo(map)
+      .bindPopup("Julius Caesar Salad Building - Jerry");
+  }
 
-var searchLayer = L.layerGroup().addTo(map);
-var saveLayer = L.layerGroup().addTo(map);
+  var searchLayer = L.layerGroup().addTo(map);
+  var saveLayer = L.layerGroup().addTo(map);
 
     // Our different layers
     var baseLayers = {
@@ -746,32 +743,32 @@ var saveLayer = L.layerGroup().addTo(map);
     L.control.layers(baseLayers, overlays, {position: 'bottomright', collapsed: collapse}).addTo(map);
     map.zoomControl.setPosition('bottomright');
 
-// Button to locate current location
-L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="width:16px">', function (btn, map) {
-    map.locate({setView: true, maxZoom: 18});
-    function onLocationFound(e) {
-    var radius = e.accuracy / 2;
-    L.marker(e.latlng, {icon: myIcon}).addTo(map)
-        .bindPopup("You are within " + Math.round(radius) + " meters from this point").openPopup();
-    L.circle(e.latlng, radius).addTo(map);
-    }
-    map.on('locationfound', onLocationFound);
-}, 'Current location').setPosition('bottomright').addTo(map);
+  // Button to locate current location
+  L.easyButton('<img src="{% static 'classes/images/currentloc.png' %}" style="width:16px">', function (btn, map) {
+      map.locate({setView: true, maxZoom: 18});
+      function onLocationFound(e) {
+      var radius = e.accuracy / 2;
+      L.marker(e.latlng, {icon: myIcon}).addTo(map)
+          .bindPopup("You are within " + Math.round(radius) + " meters from this point").openPopup();
+      L.circle(e.latlng, radius).addTo(map);
+      }
+      map.on('locationfound', onLocationFound);
+  }, 'Current location').setPosition('bottomright').addTo(map);
 
-// Button to reset map to default view
-L.easyButton('<img src="{% static 'classes/images/refresh.png' %}" style="width:16px">', function(btn, map) {
-    map.setView(new L.LatLng(40.346825, -74.656595), 16);
-}, 'Reset map').setPosition('bottomright').addTo(map);
+  // Button to reset map to default view
+  L.easyButton('<img src="{% static 'classes/images/refresh.png' %}" style="width:16px">', function(btn, map) {
+      map.setView(new L.LatLng(40.346825, -74.656595), 16);
+  }, 'Reset map').setPosition('bottomright').addTo(map);
 
-// Button to toggle favorites bar on/off
-L.easyButton('<img src="{% static 'classes/images/star.png' %}" style="width:16px">', function(btn, map) {
-    var x = document.getElementById("listOverlay");
-    if (x.style.display === "none") {
-        x.style.display = "block";
-    } else {
-        x.style.display = "none";
-    }
-}, 'Toggle favorites').setPosition('bottomright').addTo(map);
+  // Button to toggle favorites bar on/off
+  L.easyButton('<img src="{% static 'classes/images/star.png' %}" style="width:16px">', function(btn, map) {
+      var x = document.getElementById("listOverlay");
+      if (x.style.display === "none") {
+          x.style.display = "block";
+      } else {
+          x.style.display = "none";
+      }
+  }, 'Toggle favorites').setPosition('bottomright').addTo(map);
 
     // Limits zoom (we could get rid of this)
   map.options.minZoom = 14;
@@ -796,31 +793,30 @@ L.easyButton('<img src="{% static 'classes/images/star.png' %}" style="width:16p
       color: '#666',
       dashArray: '',
     });
-}
-function onEachFeature(feature, layer) {
-  layer.bindPopup();
-  layer.on({
-    mouseover: highlightFeature,
-    mouseout: resetHighlight,
-    click: zoomToFeature
-  });
-}
-function zoomToFeature(e) {
-  map.fitBounds(e.target.getBounds());
-  if (layer.getToolTip().isOpen()) {
-    layer.closeToolTip();
   }
-}
-function resetHighlight(e) {
-  var layer = e.target;
-  layer.setStyle({
-    weight: 1,
-    color: 'white',
-    dashArray: '3',
-  });
-}
-    var geojson;
-  geojson = L.geoJson(buildingData, {style: style, onEachFeature: onEachFeature}).addTo(buildings);
+  function onEachFeature(feature, layer) {
+    layer.bindPopup();
+    layer.on({
+      mouseover: highlightFeature,
+      mouseout: resetHighlight,
+      click: zoomToFeature
+    });
+  }
+  function zoomToFeature(e) {
+    map.fitBounds(e.target.getBounds());
+    if (layer.getToolTip().isOpen()) {
+      layer.closeToolTip();
+    }
+  }
+  function resetHighlight(e) {
+    var layer = e.target;
+    layer.setStyle({
+      weight: 1,
+      color: 'white',
+      dashArray: '3',
+    });
+  }
+  var geojson = L.geoJson(buildingData, {style: style, onEachFeature: onEachFeature}).addTo(buildings);
 
   // Add key if new or add value if key present
   function addDict(dict, key, val) {
