--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -306,6 +306,7 @@
 
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------ -->
 </head>
+<body>
   <!-- THE MAP -->
   <div id="map"></div>
 
