add favicon to about page

--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -5,6 +5,27 @@
 <html lang="en">
 
   <head>
+     <!-- add favicons -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'classes/images/icons/apple-icon-57x57.png'%}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'classes/images/icons/apple-icon-60x60.png'%}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'classes/images/icons/apple-icon-72x72.png'%}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'classes/images/icons/apple-icon-76x76.png'%}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'classes/images/icons/apple-icon-114x114.png'%}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'classes/images/icons/apple-icon-120x120.png'%}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'classes/images/icons/apple-icon-144x144.png'%}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'classes/images/icons/apple-icon-152x152.png'%}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'classes/images/icons/apple-icon-180x180.png'%}">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'classes/images/icons/android-icon-192x192.png'%}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'classes/images/icons/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'classes/images/icons/favicon-96x96.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'classes/images/icons/favicon-16x16.png'%}">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="{% static 'classes/images/icons/ms-icon-144x144.png' %}">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -187,7 +208,7 @@
                     <h4>Week of April 30th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Implemented a heatmap to indicate the number of students in each building, refined search results page to display as an overlay, substantially improved UI based on user feedback </p>
+                    <p class="text-muted">Implemented a heatmap to indicate the number of students in each building, refined search results page to display as an overlay, substantially improved UI based on user feedback.</p>
                   </div>
                 </div>
               </li>
@@ -200,7 +221,7 @@
                     <h4>Week of May 7th</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Presented our project, </p>
+                    <p class="text-muted">Presented our project, finished up our documentation. In talks with USG TigerApps and OIT for future plans.</p>
                   </div>
                 </div>
               </li>
