--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -6,10 +6,6 @@
 
   <head>
      <!-- add favicons -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
     <link rel="apple-touch-icon" sizes="57x57" href="{% static 'classes/images/icons/apple-icon-57x57.png'%}">
     <link rel="apple-touch-icon" sizes="60x60" href="{% static 'classes/images/icons/apple-icon-60x60.png'%}">
     <link rel="apple-touch-icon" sizes="72x72" href="{% static 'classes/images/icons/apple-icon-72x72.png'%}">
@@ -32,8 +28,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About ClassMaps</title>
-
     <!-- Bootstrap core CSS -->
     <link href="{% static 'classes/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
@@ -54,11 +48,12 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="https://classmaps.herokuapp.com/">ClassMaps</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">ClassMaps</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
@@ -80,6 +75,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading text-uppercase">ClassMaps</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://classmaps.herokuapp.com/">Login</a>
         </div>
       </div>
     </header>
