--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -104,7 +104,7 @@
               <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Saving</h4>
-            <p class="text-muted">Users can save all of their classes so that they will always have the location of their classes on hand. </p>
+            <p class="text-muted">Users can save all of their classes so that they will always have the location of their classes on hand using their Princeton Account</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -116,6 +116,17 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Elevator Pitch</h2>
+            <h3 class="text">Why ClassMaps?</h3>
+          </div>
+        </div>
+        <p class = "text-muted"> ClassMaps is a web application that gives Princeton students and easy way to find the location of their classes, as well as other resources and places on campus. The current methods of doing this are limited and decentralized. Normally, students have to go through a two step process of searching for a class on course offerings, and then looking up the location on Google or Princeton map, but ClassMaps bridges those two steps into a singular process. ClassMaps will give Princeton students a platform to quickly see where and when classes of interest meet. </p>
+        <p class = "text-muted"> Unlike previous course offering projects which are used primarily during course selection, we envision ClassMaps to be used even after sporadically to find event locations, resources, and other precepts. However, we primarily target ClassMaps at underclassmen, and for use during the first couple weeks of classes when people need to remember where their classes are. </p>
+      </div>
+
     </section>
 
     <!-- Timeline -->
