--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -116,6 +116,7 @@
           </div>
         </div>
       </div>
+      <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
