--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -65,6 +65,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#docs">Docs</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -117,9 +120,6 @@
         </div>
       </div>
       <br>
-      <div class="col-lg-12 text-center">
-        <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
-      </div>
       <br>
       <div class="container">
         <div class="row">
@@ -360,6 +360,15 @@
           </div>
         </div>
       </div>
+    </section>
+
+        <!-- Documentation -->
+    <section class="bg-light" id="docs">
+      <div class="col-lg-12 text-center">
+        <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
+        <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Final Report</a></h2>
+        <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Product Guide</a></h2>
+      </div>     
     </section>
 
     <!-- Bootstrap core JavaScript -->
