--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">ClassMaps is a web application that gives Princeton students and easy way to find the location of their classes, as well as other resources and places on campus. </h3>
+            <h3 class="section-subheading text-muted">ClassMaps is a Princeton webapp makes it easy to find classes, resources, and places on campus. </h3>
           </div>
         </div>
         <div class="row text-center">
@@ -364,6 +364,11 @@
 
         <!-- Documentation -->
     <section class="bg-light" id="docs">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Documentation</h2>
+          </div>
+        </div>
       <div class="col-lg-12 text-center">
         <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
         <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Final Report</a></h2>
