--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-heading text-uppercase">ClassMaps</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://classmaps.herokuapp.com/">Login</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://classmaps.herokuapp.com/">Explore</a>
         </div>
       </div>
     </header>
