--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -498,8 +498,10 @@ var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 
 var temp = width/150;
 console.log(temp);
+console.log("{{num_matches}}");
 {% if num_matches < temp %}
   //if(width > 720){
+    console.log("autowidth")
     document.getElementById("resultsOverlay").style.width = "auto";
   //}
   // else{
