--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -497,7 +497,7 @@ function addImageRow(id, text) {
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 
 var temp = width/150;
-console.log(temp);
+console.log(Math.floor(temp);
 console.log("{{num_matches}}");
 {% if num_matches < temp %}
   //if(width > 720){
