--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -496,8 +496,8 @@ function addImageRow(id, text) {
 // check screen size for mobile
 var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 
-var temp = width/150;
-console.log(Math.floor(temp);
+var temp = Math.floor(width/150);
+console.log(temp);
 console.log("{{num_matches}}");
 {% if num_matches < temp %}
   //if(width > 720){
