--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -498,8 +498,8 @@ var width = (window.innerWidth > 0) ? window.innerWidth : screen.width;
 
 var temp = Math.floor(width/150);
 console.log(temp);
-console.log("{{num_matches}}");
-var num = "{{num_matches}}";
+var num = "{{num_matches}}" + 1;
+console.log(num);
 if(num < temp){
   console.log("autowidth")
     document.getElementById("resultsOverlay").style.width = "auto";
