remove container padding

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -300,7 +300,7 @@
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     }
     .container {
-        padding: 2px 8px;
+        padding: 0;
     }
   </style>
 
