does this make it better

--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -200,7 +200,7 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="{% static 'classes/img/about/saving.png' %}" alt="">
+                  <img class="mx-auto rounded-circle img-fluid" src="{% static 'classes/img/about/saving.png' %}" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
