--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -314,7 +314,7 @@
   <div id="overlay" class="overlay">
     <form id="searchbar" name="myform" method="GET" action="{% url 'classes:search' %}">
       <!-- logo/home button -->
-     <a href="{% url 'classes:index' %}">
+     <a href="https://classmaps.herokuapp.com">
        <img src="{% static 'classes/images/lightlogo.png'%}" alt="ClassMaps" style="width:42px; float:left; margin-right:10px">
      </a>
      <!-- search input -->
@@ -392,11 +392,11 @@
  <div id="sideOverlay" class="sideOverlay" style="overflow: auto;">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a style="pointer-events: none;"> Welcome, {{netid}}</a>
-  <a href="{% url 'classes:about' %}" target="_blank"><i class="fa fa-info-circle"></i> &nbsp&nbspAbout</a>
+  <a href="https://classmaps.herokuapp.com/about" target="_blank"><i class="fa fa-info-circle"></i> &nbsp&nbspAbout</a>
   <a onclick="openHelp()"><i class="fa fa-question-circle"></i> &nbsp&nbspHelp</a>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfOX9jOp3gI_k9EWZPRFgFlG76HYGUtcY1nLl1pCTybvus0nQ/viewform?usp=sf_link" target="_blank"><i class="fa fa-comment"></i> &nbspFeedback</a>
-  <a href="{% url 'classes:about' %}"+"/#team" target="_blank"><i class="fa fa-address-card"></i> &nbspContact</a>
-  <a href="{% url 'classes:cas_ng_logout' %}"><i class="fa fa-sign-out"></i> &nbsp&nbspSign Out</a>
+  <a href="https://classmaps.herokuapp.com/about/#team" target="_blank"><i class="fa fa-address-card"></i> &nbspContact</a>
+  <a href="https://classmaps.herokuapp.com/accounts/logout"><i class="fa fa-sign-out"></i> &nbsp&nbspSign Out</a>
 
     <footer style="font-size: 12px; padding: 10px; position: absolute; bottom: 0; right: 0;">
       <p>To add the site to your phone's homescreen, open the <a style="padding: 0; font-size: 12px; color: #00aaee;" href="/">homepage</a></p>
