Limit user input

--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -319,7 +319,7 @@
      </a>
      <!-- search input -->
      <div style="width:30%; float:left;">
-      <input id = "search" style="font-size:15px;" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
+      <input id = "search" maxlength="500" style="font-size:15px;" name = "q" value="{{request.GET.q}}" placeholder="Enter a course or building...">
     </div>
     <div style="width:60px; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="false">
