Added report and product guide to about page

--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -372,8 +372,8 @@
         </div>
       <div class="col-lg-12 text-center">
         <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
-        <h2 class="text"><a href="https://docs.google.com/document/d/10qB9gRE8ux7P9bzJmoSLR0dPkKSqPatRS1-rUCNYRnY/edit?usp=sharing">Final Report</a></h2>
-        <h2 class="text"><a href="https://docs.google.com/document/d/1JsQ14hF8K4qeF65rrN-7Sbmo1xsJBpj2q42VDCNHu30/edit?usp=sharing">Product Guide</a></h2>
+        <h2 class="text"><a href="{% static 'classes/report.pdf' %}">Final Report</a></h2>
+        <h2 class="text"><a href="{% static 'classes/productguide.pdf' %}">Product Guide</a></h2>
       </div>     
     </section>
 
