Added design doc

--- a/classes/templates/classes/about.html
+++ b/classes/templates/classes/about.html
@@ -371,7 +371,7 @@
           </div>
         </div>
       <div class="col-lg-12 text-center">
-        <h2 class="text"><a href="https://andsylin.github.io/images/desdoc.pdf">Design Document</a></h2>
+        <h2 class="text"><a href="{% static 'classes/designdoc.pdf' %}">Design Document</a></h2>
         <h2 class="text"><a href="{% static 'classes/report.pdf' %}">Final Report</a></h2>
         <h2 class="text"><a href="{% static 'classes/productguide.pdf' %}">Product Guide</a></h2>
       </div>     
