--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -310,7 +310,7 @@
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------ -->
 </head>
 <body>
-  <a href='http://example.com/' data-intro='Hello step one!'></a>
+  
   <!-- THE MAP -->
   <div id="map"></div>
 
@@ -413,6 +413,7 @@
 <!--  Code for help overlay  -->
 <div id="helpOverlay" class="helpOverlay" style="overflow: auto;" onclick="closeHelp()">
   <h3>Help</h3>
+  <a href='http://google.com/' data-intro='Hello step one!'></a>
   <img id="helpimage" src="{% static 'classes/images/helpoverlay.png'%}" style="width:490px;">
 </div>
 
