--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -315,7 +315,7 @@
   <div id="map"></div>
 
   <!-- Search bar overlay -->
-  <div id="overlay" class="overlay">
+  <div data-step="1" data-intro="This is the search bar!" id="overlay" class="overlay">
     <form id="searchbar" name="myform" method="GET" action="{% url 'classes:search' %}">
       <!-- logo/home button -->
      <a href="https://classmaps.herokuapp.com">
