--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -419,6 +419,7 @@
   <!--  javascript file for intro guide  -->
   <script type="text/javascript" src="{% static 'classes/intro.js' %}"></script>
 <script>
+  introJs().start();
 // Autocomplete javascript
 $(function() {
   $("#search").autocomplete({
